--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -17,6 +17,7 @@ jobs:
           - py3.10
           - py3.11
           - py3.12
+          - rust
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -46,6 +47,9 @@ jobs:
               echo "LANG=python" >> $GITHUB_ENV
               echo "PYTHON_VERSION=3.12" >> $GITHUB_ENV
               ;;
+            rust)
+              echo "LANG=rust" >> $GITHUB_ENV
+              ;;
             *)
               exit 1
               ;;
@@ -73,7 +77,7 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
-        if: ${{ env.LANG != 'cpp' }}
+        if: ${{ env.LANG == 'python' }}
         with:
           platforms: linux/amd64,linux/arm64
           build-args: |
@@ -86,7 +90,7 @@ jobs:
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
-        if: ${{ env.LANG == 'cpp' }}
+        if: ${{ env.LANG != 'python' }}
         with:
           platforms: linux/amd64,linux/arm64
           context: .
