--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -1,9 +1,12 @@
 name: Docker Build and Push
 
 on:
-  push:
-    branches: [ main ]
-
+  workflow_dispatch:
+    inputs:
+      lang:
+        required: true
+        default: "cpp"
+        description: "The language to build and push the Docker image for"
 env:
   REGISTRY: docker.io
   IMAGE_NAME: ivyxjc/devcontainer
